--- a/templates/binary.html
+++ b/templates/binary.html
@@ -34,7 +34,8 @@ add new images (ie PNGs) to project -->
         function getBits(n) {
             let bits = "";
             for(let i = 0; i < BITS; i++) {
-                bits = bits + document.getElementById('digit' + i).value;
+                let digit = 'digit'+n;
+                bits = bits + document.getElementById(digit + i).value;
             }
             return bits;
         }
@@ -80,11 +81,11 @@ add new images (ie PNGs) to project -->
 
 
         // toggle selected bit and recalculate
-        function toggleBit(i) {
+        function toggleBit(i,n,bulbn,buttn,digitn) {
 //alert("Digit action: " + i );
-            const dig = document.getElementById('digit' + i);
-            const image = document.getElementById('bulb' + i);
-            const butt = document.getElementById('butt' + i);
+            const dig = document.getElementById('digitn' + i);
+            const image = document.getElementById('bulbn' + i);
+            const butt = document.getElementById('buttn' + i);
 // Change digit and visual
             if (image.src.match("{{ imgBulbOn }}")) {
                 dig.value = 0;
@@ -163,8 +164,19 @@ add new images (ie PNGs) to project -->
                 decimal = 0 === decimal ? MAX : decimal *= n; // OVERFLOW or MINUS
             }
 
-
-
+function addBins (n1, n2)
+    bin1 = getBitds (n1);
+    bin2 = getBits(n2);
+    decSum = parseInt(bin1, 2) +parseInt (bin2, 2);
+    binSum = Number(decSum).toString(2)
+    binSum =  binSum.padStart(0, "0");
+    for (let i= 0, i < BITS; i++
+            {
+                document.getElementById('digit3' + i).value = binSum.substr(i, 1);
+            }
+            document.getElementByIs('decVal1').innerHTML = "Decimal Value 1: " + parseInt(bin1,2;
+            document.getElementByIs('decVal2').innerHTML = "Decimal Value 2: " + parseInt(bin1,2;
+        })
 // convert the result back to binary
             binary = decimal_2_base(decimal, 2);
 // update conversions
@@ -295,7 +307,19 @@ add new images (ie PNGs) to project -->
                         <td><label for='digit{{j}}'></label><input type='text' id='digit{{j}}' Value="0" size="2" readonly></td>
                     {% endfor %}
                 <tr>
-
+                <tr>
+                    <!-- for loop -->
+                    {% for j in range(BITS) %}
+                        <td><img class="img-responsive py-3" id="bulb{{j}}" src="{{ imgBulbOff }}" alt="" width="40" height="Auto">
+                            <button type="button" id="butt{{j}}" onclick="toggleBit2('{{j}}')">{{ msgTurnOn }}</button>
+                        </td>
+                    {% endfor %}
+                </tr>
+                <tr>
+                    {% for j in range(BITS) %}
+                        <td><label for='digit{{j}}'></label><input type='text' id='digit{{j}}' Value="0" size="2" readonly></td>
+                    {% endfor %}
+                <tr>
             </table>
         </div>
 
