fixed navbar for continent and greet

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -46,6 +46,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                                 <button type="button" class="btn btn-info">Kashish's Greet</button>
                             </a>
                     </ul>
+            </body>
+            </html>
+
+        </div>
 
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Continents
