--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -123,7 +123,8 @@
             </td>
             <td>Christina Berglund</td>
             <td>Sweden</td>
-            <td></td>
+            <td>
+            </td>
             <td></td>
         </tr>
         <tr>
@@ -133,7 +134,10 @@
                 <h5>Journal 1 w/ Sreeja</h5>
                 <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="430" height="340" allow="autoplay"></iframe></p>
             </td>
-            <td></td>
+            <td>
+                <iframe src="https://trinket.io/embed/python/019cd9211e?runOption=run" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            </td>
+
             <td></td>
         </tr>
     </table>
