--- a/templates/grid.html
+++ b/templates/grid.html
@@ -168,7 +168,7 @@
             <a href="/logicgates">Logic Gates</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href="/binary2">Binary2</a>
+            <a href="/binary2">Signed Binary</a>
         </div>
 
         {% endblock %}
