Signed Addition (Problem with the addition)

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -25,6 +25,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href="/rgb">RGB</a>
             <a class="nav-link" href="/minilabs">Minilabs!</a>
             <a class="nav-link" href="/binary/colorcode">Color Code</a>
+            <a class="nav-link" href="/binary/signedaddition">Signed Addition</a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href={{ url_for('aboutus') }} data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">
                     About us!
